// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Masonry card snapshots Masonry card 1`] = `
<div>
  <div
    class="card_masonry "
  >
    <div
      class="card-img "
      id=""
    >
      <img
        alt="img-background"
        src="https://i.pinimg.com/736x/ee/be/fb/eebefb37815a1346e8cb4f3db608e1b1.jpg"
      />
    </div>
    <div
      class="card_masonry-content"
    >
      <div
        class="card-top "
        id=""
      >
        <div
          class="status-tag_success"
        >
          semantic
        </div>
        <button
          class="button-card-icon"
        >
          <span
            class="material-icons"
          >
            more_vert
          </span>
        </button>
        <button
          class="button-card-icon"
        >
          <span
            class="material-icons"
          >
            favorite_border
          </span>
        </button>
      </div>
      <div
        class="card-header "
        id=""
      >
        <h4>
          This is a title
        </h4>
      </div>
      <div
        class="card-body "
        id=""
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ea voluptates, facilis dolore dignissimos eum accusamus vitae accusantium dolores veritatis maiores deserunt unde natus similique omnis sit quaerat! At, asperiores.
      </div>
    </div>
  </div>
</div>
`;

exports[`Masonry card snapshots Masonry card horizontal 1`] = `
<div>
  <div
    class="card_masonry_horizontal "
  >
    <div
      class="card-img "
      id=""
    >
      <img
        alt="img-background"
        src="https://i.pinimg.com/736x/ee/be/fb/eebefb37815a1346e8cb4f3db608e1b1.jpg"
      />
    </div>
    <div
      class="card_masonry-content"
    >
      <div
        class="card-top "
        id=""
      >
        <div
          class="status-tag_success"
        >
          semantic
        </div>
        <button
          class="button-card-icon"
        >
          <span
            class="material-icons"
          >
            more_vert
          </span>
        </button>
        <button
          class="button-card-icon"
        >
          <span
            class="material-icons"
          >
            favorite_border
          </span>
        </button>
      </div>
      <div
        class="card-header "
        id=""
      >
        <h4>
          This is a title
        </h4>
      </div>
      <div
        class="card-body "
        id=""
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ea voluptates, facilis dolore dignissimos eum accusamus vitae accusantium dolores veritatis maiores deserunt unde natus similique omnis sit quaerat! At, asperiores.
      </div>
    </div>
  </div>
</div>
`;
